# BasicProject

./: CMakeLists.txt  README.md  app_build.sh  main.c  make_app.sh
Application/: CMakeLists.txt
Application/AppPrintData/: AppPrintData.c  AppPrintData.h
Application/AppShowTime/: AppShowTime.c  AppShowTime.h  CMakeLists.txt
Common/: CMakeLists.txt  Common.h
Common/ComTimeFunc/: CMakeLists.txt  ComTimeFunc.c  ComTimeFunc.h
ProCommon/: BasicProCom.h
